@startuml
'https://plantuml.com/class-diagram
!include ../Style.puml
hide circle
skinparam classAttributeIconSize 0
skinparam classFontSize 16
title Class Diagram of Workout-related Features

Parser .r.> "{abstract}\nCommand":creates >
"{abstract}\nCommand" <|- WorkoutCommand
WorkoutCommand -r-> WorkoutList
WorkoutCommand --> FileManager
WorkoutCommand --> UI
WorkoutCommand -u-> PlanList

class PlanList COLOR_LOGIC {
+ deletePlanContainsDeletedWorkout(deletedWorkoutDetail:String):void
+ updatePlanContainsUpdatedWorkout(workoutToCheck:String, updatedWorkout:Workout):void
}

class FileManager COLOR_STORAGE {
+ writeNewWorkoutToFile(newWorkout:Workout):void
+ rewriteAllWorkoutsToFile(workoutList:WorkoutList):void
+ rewriteAllPlansToFile(planList:PlanList):void
}

class "{abstract}\nCommand" COLOR_LOGIC {
}

class WorkoutCommand COLOR_LOGIC {
+ execute():void
}

class WorkoutList COLOR_LOGIC {
+ createNewWorkout(userArgument:String):Workout
+ addNewWorkoutToLists(newWorkout:Workout):void
+ listAllWorkout():void
+ deleteWorkout(userArgument:String):Workout
+ updateWorkout(userArgument:String):Workout
}

class UI COLOR_UI {
+ printNewWorkoutCreatedMessage(newWorkout:Workout):void
+ printDeleteWorkoutMessage(deletedWorkout:Workout):void
+ printUpdateWorkoutMessage(updatedWorkout:Workout):void
}

class Parser COLOR_PARSER {
+ parseUserInput(userInput:String):Command
+ createWorkoutCommand(userInput:String):WorkoutCommand
}


@enduml